opam-version: "1.2"
maintainer: "Tony Wuersch <tony.wuersch@gmail.com>"
homepage: "https://github.com/awuersch/sslconf"
dev-repo: "https://github.com/awuersch/sslconf.git"
bug-reports: "https://github.com/awuersch/sslconf/issues"
doc: "https://awuersch.github.io/sslconf/doc"
authors: [
  "Tony Wuersch <tony.wuersch@gmail.com>"
]
license: "ISC"
depends: [
  "ocaml" {build & >= "4.03.0" & < "4.06.0"}
  "jbuilder" {build}
  "ppx_sexp_conv" {build}
  "sexplib" {build}
  "astring" {build}
  "rresult" {build}
  "fpath" {build}
  "topkg-jbuilder" {build}
  "ounit" {test}
  "odoc" {doc}
]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
